--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,18 @@ android {
 
 dependencies {
 
+    implementation 'com.jakewharton:butterknife:10.2.3'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+
+    //glide
+    implementation ("com.github.bumptech.glide:glide:4.11.0") {
+        exclude group: "com.android.support"
+    }
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //    OKHTTP
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
