引导页完成,二次进入不会显示引导页

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.smartcity_test5">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SmartCity_test5">
+        android:theme="@style/Theme.SmartCity_test5"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".GuideActivity" android:label="引导页"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
