智慧巴士--- 首页 巴士定制第一页。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartCity_test5"
         android:usesCleartextTraffic="true">
-        <activity android:name=".GuideActivity" android:label="引导页"></activity>
+        <activity android:name=".bus.BusDingzhi2Activity"></activity>
+        <activity
+            android:name=".bus.BusDingzhiActivity"
+            android:label="定制班车" />
+        <activity
+            android:name=".bus.BusMainActivity"
+            android:label="智慧巴士" />
+        <activity
+            android:name=".GuideActivity"
+            android:label="引导页" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
