--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartCity_test5"
         android:usesCleartextTraffic="true">
-        <activity android:name=".bus.BusDingzhi2Activity"></activity>
+        <activity android:name=".BusInfoActivity"></activity>
+        <activity android:name=".bus.BusDingzhi2Activity" />
         <activity
             android:name=".bus.BusDingzhiActivity"
             android:label="定制班车" />
