--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartCity_test5"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.personal.activity.ChangeActivity" android:label="修改密码" android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".ui.personal.activity.FeedbackActivity" android:label="意见反馈" android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".ui.personal.activity.ChangeActivity"
+            android:label="修改密码"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ui.personal.activity.UserInfoActivity"
             android:label="个人详情"
